# kaggle-santa-2023-rubiks-cube-sovler

./: .gitignore  Cargo.toml  README.md  state.txt  viz.ipynb
data/: my_133k.csv  my_133k.csv.txt  my_134k.csv  my_134k.csv.txt  my_135k.csv  my_135k.csv.txt  my_136k.csv  my_136k.csv.txt  my_138k.csv  my_138k.csv.txt  my_140k.csv  my_140k.csv.txt  my_141k.csv  my_141k.csv.txt  my_143k.csv  my_143k.csv.txt  my_151k.csv  my_151k.csv.txt  my_152k.csv  my_152k.csv.txt  my_156k.csv  my_156k.csv.txt  my_158k.csv  my_158k.csv.txt  my_159k.csv  my_159k.csv.txt  my_166k.csv  my_166k.csv.txt  my_167k.csv  my_167k.csv.txt  my_168k.csv  my_168k.csv.txt  my_169k.csv  my_169k.csv.txt  my_174k.csv  my_174k.csv.txt  my_183k.csv  my_183k.csv.txt  my_207k.csv  my_207k.csv.txt  (+33 more)
dwalton76/: wrapper.ipynb
src/: checker.rs  cube_ab.rs  cube_edges_calculator.rs  data.rs  dsu.rs  dwalton_experiment.rs  edge_solver.rs  edge_solver_dwalton.rs  exact_perm33_solver.rs  exact_perm_solver.rs  globe_bfs.rs  globe_jaapsch.rs  globe_optimizer.rs  globe_sim_annealing.rs  greedy.rs  groups.rs  kociemba_solver.rs  main.rs  moves.rs  parallel_triangle_solver.rs  permutation.rs  puzzle.rs  puzzle_type.rs  rotations.rs  sol_utils.rs  solutions_log.rs  solve_globe.rs  solver.rs  solver3.rs  solver4.rs  solver_nnn.rs  submission_combiner.rs  to_cube3_converter.rs  triangle_solver.rs  triangles_parity.rs  twsearch_experiment.rs  utils.rs  wreath_solver.rs
