[package]
name = "santa-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
fastrand = "2.0.1"
rand = "0.8.5"
random = "0.14.0"
serde_json = "1.0.109"
rand_chacha = "0.3.1"
rayon = "1.8.0"
rustc-hash = "1.1.0"


[profile.release]
debug = 1
